deploy: 8b1c81fc4db4def67c93c3874322570709dd385b

--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -227,6 +227,10 @@
     <td>Building a political text editition with TEI Publisher. A field report</td>
   </tr>
   <tr>
+    <td><a href="/posts/community-event-geovistory/"><code>/posts/community-event-geovistory/</code></a></td>
+    <td>When XML/TEI meets Linked Open Data : the Tagebücher Anna Maria Preiswerk-Iselin Project</td>
+  </tr>
+  <tr>
     <td><a href="/admin/"><code>/admin/</code></a></td>
     <td></td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
     <td>Tagged “static”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/announcements/"><code>/tags/announcements/</code></a></td>
-    <td>Tagged “announcements”</td>
   </tr>
   </tbody>
 </table>
