--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/announcements/"><code>/tags/announcements/</code></a></td>
+    <td>Tagged “announcements”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/best-practice/"><code>/tags/best-practice/</code></a></td>
     <td>Tagged “best practice”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
-    <td>Tagged “hugo”</td>
   </tr>
   </tbody>
 </table>
