--- a/page-list/5/index.html
+++ b/page-list/5/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
+    <td>Tagged “hugo”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/pb-component/"><code>/tags/pb-component/</code></a></td>
     <td>Tagged “pb-component”</td>
   </tr>
@@ -241,10 +245,6 @@
   <tr>
     <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
     <td>Tagged “markdown”</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-event-geovistory/"><code>/posts/community-event-geovistory/</code></a></td>
-    <td>When XML/TEI meets Linked Open Data : the Tagebücher Anna Maria Preiswerk-Iselin Project</td>
   </tr>
   <tr>
     <td><a href="/posts/community-event-fischer/"><code>/posts/community-event-fischer/</code></a></td>
