deploy: 275be66c724c7b38f4f1db041c6d482df55eca8d

--- a/pages/community-meetings/index.html
+++ b/pages/community-meetings/index.html
@@ -101,7 +101,8 @@
         <div class="">
             <h1>Community Meetings</h1>
             <figure><img src="/img/redd-5U_28ojjgms-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@reddalec?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Redd</a> on <a href="https://unsplash.com/s/photos/meeting?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></figcaption></figure>
-<p>In April 2021 e-editions have launched a series of regular community meetings that will be held on the first Tuesday of each month at 17:00 CET/CEST. Meetings will be held online at <a href="https://meet.existsolutions.com/eeditiones">https://meet.existsolutions.com/eeditiones</a> and will not be recorded. Registration is not required to attend.</p>
+<p>In April 2021 e-editions have launched a series of regular community meetings that will be held on the first Tuesday of each month at 17:00 CET/CEST. <b>As of 12 June 2023 meetings will be held online on Teams. We will publish the respective link with the announcement of the event.</b></p>
+<!--at [https://meet.existsolutions.com/eeditiones](https://meet.existsolutions.com/eeditiones) and will not be recorded. Registration is not required to attend. -->
 <p>The objective of these meetings is to give the community a space to discuss topics and present editions, projects, challenges and solutions. Meetings will last one hour and a short presentation of the topic or the project will be followed by an open discussion.</p>
 <p>We warmly invite you to propose topics at <a href="info@e-editiones.org">info@e-editiones.org</a> for the future community meetings dates.</p>
 <p>See the <a href="/tags/meetups/">list of past and scheduled meetups</a></p>
