deploy: 8e6594118ae6371b74b961298ee0a7ff9e3afc9f

--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
+    <td>Tagged “static”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/announcements/"><code>/tags/announcements/</code></a></td>
     <td>Tagged “announcements”</td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/report/"><code>/tags/report/</code></a></td>
     <td>Tagged “report”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/best-practice/"><code>/tags/best-practice/</code></a></td>
-    <td>Tagged “best practice”</td>
   </tr>
   </tbody>
 </table>
