--- a/page-list/5/index.html
+++ b/page-list/5/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/best-practice/"><code>/tags/best-practice/</code></a></td>
+    <td>Tagged “best practice”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
     <td>Tagged “hugo”</td>
   </tr>
@@ -245,10 +249,6 @@
   <tr>
     <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
     <td>Tagged “markdown”</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-event-fischer/"><code>/posts/community-event-fischer/</code></a></td>
-    <td>Travel by mouse click: the digital edition of the travel journals of Johann Conrad Fischer 1794–1851</td>
   </tr>
   </tbody>
 </table>
