--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -231,6 +231,10 @@
     <td>When XML/TEI meets Linked Open Data : the Tagebücher Anna Maria Preiswerk-Iselin Project</td>
   </tr>
   <tr>
+    <td><a href="/posts/community-event-fischer/"><code>/posts/community-event-fischer/</code></a></td>
+    <td>Travel by mouse click: the digital edition of the travel journals of Johann Conrad Fischer 1794–1851</td>
+  </tr>
+  <tr>
     <td><a href="/admin/"><code>/admin/</code></a></td>
     <td></td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/"><code>/tags/</code></a></td>
     <td></td>
-  </tr>
-  <tr>
-    <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
-    <td>Tagged “static”</td>
   </tr>
   </tbody>
 </table>
