--- a/pages/statuten-des-vereins-e-editiones-german/index.html
+++ b/pages/statuten-des-vereins-e-editiones-german/index.html
@@ -106,16 +106,16 @@
 <h2 id="art.-2-vereinszweck" tabindex="-1">Art. 2 Vereinszweck</h2>
 <p>(1) Der Verein leistet einen Beitrag für die Erschliessung, Erhaltung und Vermittlung des Kulturerbes, indem er den fachlichen Austausch und die Förderung der Vernetzung und Standardisierung digitaler wissenschaftlicher Editionen sowie die Interessenvertretung digitaler Editionen verfolgt. Der Verein bemüht sich um die Qualitätssicherung und Qualitätsverbesserung mittels anerkannter technischer Standards sowie um die technische Pflege der Inhalte und ermöglicht die freie Nachnutzung zu wissenschaftlichen Zwecken.</p>
 <p>(2) Der Verein hat insbesondere folgende Aufgaben:</p>
-<p>a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wissen-schaftliche digitale Editionen  
-b) Betrieb einer Informations- und Kommunikationsplattform für die Mitglieder  
-c) Unterstützung von Editionsprojekten bei der dauerhaften Speicherung digitaler Daten und Zugänglichmachung digitaler Daten  
-d) Beratung und Unterstützung von Editionsprojekten</p>
+<p>a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wissenschaftliche digitale Editionen<br />
+b) Betrieb einer Informations- und Kommunikationsplattform für die Mitglieder<br />
+c) Unterstützung von Editionsprojekten bei der dauerhaften Speicherung digitaler Daten und Zugänglichmachung digitaler Daten<br />
+d) Beratung und Unterstützung von Editionsprojekten<br /></p>
 <p>(3) Der Verein verfolgt keine kommerziellen Zwecke und erstrebt keinen Gewinn.</p>
 <h2 id="art.-3-finanzierung" tabindex="-1">Art. 3 Finanzierung</h2>
 <p>(1) Zur Verfolgung des Vereinszwecks kann über folgende Mittel verfügt werden:</p>
-<p>a) Mitgliederbeiträge  
-b) Zuwendungen, Spenden und Subventionen</p>
-<p>(2) Der volle Mitgliederbeitrag beträgt CHF 500.-. Für natürliche Personen gibt es einen ermässigten Mitgliederbeitrag von CHF 50.-.</p>
+<p>a) Mitgliederbeiträge<br />
+b) Zuwendungen, Spenden und Subventionen<br /></p>
+<p>(2) Der volle Mitgliederbeitrag beträgt CHF 500.–. Für natürliche Personen gibt es einen ermässigten Mitgliederbeitrag von CHF 50.–.</p>
 <p>(3) Das Geschäftsjahr entspricht dem Kalenderjahr.</p>
 <h2 id="art.-4-mitgliedschaft" tabindex="-1">Art. 4 Mitgliedschaft</h2>
 <p>(1) Mitglieder können juristische Personen und natürliche Personen werden, die den Vereinszweck unterstützen.</p>
@@ -129,22 +129,22 @@ b) Zuwendungen, Spenden und Subventionen</p>
 <p>(2) Den Ausschlussentscheid kann die Mitgliederversammlung mit einfacher Mehrheit fällen. Das auszuschliessende Mitglied muss vorgängig angehört werden.</p>
 <h2 id="art.-8-organe-des-vereins" tabindex="-1">Art. 8 Organe des Vereins</h2>
 <p>Die Organe des Vereins sind:</p>
-<p>a) die Mitgliederversammlung  
-b) der Vorstand  
-c) die Revisionsstelle</p>
+<p>a) die Mitgliederversammlung<br />
+b) der Vorstand<br />
+c) die Revisionsstelle<br /></p>
 <h2 id="art.-9-die-mitgliederversammlung" tabindex="-1">Art. 9 Die Mitgliederversammlung</h2>
 <p>Das oberste Organ des Vereins ist die Mitgliederversammlung. In ihre Kompetenz fallen insbesondere:</p>
-<p>a) Entscheid über die Aufnahme von Neumitgliedern  
-b) Genehmigung des Protokolls der letzten Mitgliederversammlung  
-c) Genehmigung des Jahresberichts des Vorstands  
-d) Entgegennahme des Revisionsberichts und Genehmigung der Jahresrechnung  
-e) Entlastung des Vorstandes  
-f) Wahl des Präsidenten, der weiteren Vorstandsmitglieder sowie der Revisionsstelle  
-g) Genehmigung des Jahresbudgets  
-h) Genehmigung des Tätigkeitsprogramms  
-i) Beschlussfassung über Anträge des Vorstands und der Mitglieder  
-j) Beschlussfassung über Änderung der Statuten  
-k) Beschlussfassung über die Auflösung des Vereins und die Verwendung des - Vereinsvermögens</p>
+<p>a) Entscheid über die Aufnahme von Neumitgliedern<br />
+b) Genehmigung des Protokolls der letzten Mitgliederversammlung<br />
+c) Genehmigung des Jahresberichts des Vorstands<br />
+d) Entgegennahme des Revisionsberichts und Genehmigung der Jahresrechnung<br />
+e) Entlastung des Vorstandes<br />
+f) Wahl des Präsidenten, der weiteren Vorstandsmitglieder sowie der Revisionsstelle<br />
+g) Genehmigung des Jahresbudgets<br />
+h) Genehmigung des Tätigkeitsprogramms<br />
+i) Beschlussfassung über Anträge des Vorstands und der Mitglieder<br />
+j) Beschlussfassung über Änderung der Statuten<br />
+k) Beschlussfassung über die Auflösung des Vereins und die Verwendung des - Vereinsvermögens<br /></p>
 <h2 id="art.-10-einberufung-der-mitgliederversammlung" tabindex="-1">Art. 10 Einberufung der Mitgliederversammlung</h2>
 <p>(1) Eine ordentliche Mitgliederversammlung findet jährlich statt.</p>
 <p>(2) Zur Mitgliederversammlung werden die Mitglieder spätestens 10 Tage im Voraus schriftlich (Brief oder E-Mail) unter Angabe der Traktanden eingeladen.</p>
