deploy: c90467ce18973dcc56a8934c98ca2b0874201728

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -141,6 +141,7 @@
 <li>Roberta Padlina, Dr. des., Coordinator <a href="https://www.nie-ine.ch/">NIE-INE</a>, Universität Basel</li>
 <li>Gerold Ritter, Dr. phil., <a href="https://www.e-hist.ch">e-hist</a>, Zürich</li>
 <li><a href="https://hcommons.org/members/arojascastro1987">Antonio Rojas-Castro</a>, PhD, /Berlin-Brandenburgische Akademie der Wissenschaften and Universidad Internacional de la Rioja</li>
+<li>Gil Shalit, <a href="https://www.dh-dev.com/">DH Development</a></li>
 <li>Sinai Rusinek, <a href="https://elijahlab.haifa.ac.il/" title="Elijah Lab">Elijah Lab</a>, Haifa University; project leader of TraveLab</li>
 <li>Roman Sigg, <a href="https://www.steinamrhein.ch/xml_1/internet/de/application/d3/d723/d724/f346.cfm">Stadtarchivar Stein am Rhein</a></li>
 <li><a href="https://www.phsg.ch/de/team/prof-dr-christian-sinn">Christian Sinn</a>, Dr. phil., Professor, Präsident der Masterarbeitskommission Studienbereichsleiter Sprachen und Literatur, Pädagogische Hochschule St.Gallen</li>
