--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -235,6 +235,10 @@
     <td>Travel by mouse click: the digital edition of the travel journals of Johann Conrad Fischer 1794–1851</td>
   </tr>
   <tr>
+    <td><a href="/posts/community-event-airtable/"><code>/posts/community-event-airtable/</code></a></td>
+    <td>How History At State uses TEI Publisher&#39;s annotation tool and Airtable</td>
+  </tr>
+  <tr>
     <td><a href="/admin/"><code>/admin/</code></a></td>
     <td></td>
   </tr>
@@ -256,10 +260,6 @@
   </tr>
   <tr>
     <td><a href="/search/"><code>/search/</code></a></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td><a href="/tags/"><code>/tags/</code></a></td>
     <td></td>
   </tr>
   </tbody>
