--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/"><code>/tags/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
     <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
     <td>Tagged “static”</td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
     <td>Tagged “grants”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/report/"><code>/tags/report/</code></a></td>
-    <td>Tagged “report”</td>
   </tr>
   </tbody>
 </table>
