--- a/page-list/5/index.html
+++ b/page-list/5/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/report/"><code>/tags/report/</code></a></td>
+    <td>Tagged “report”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/best-practice/"><code>/tags/best-practice/</code></a></td>
     <td>Tagged “best practice”</td>
   </tr>
@@ -249,10 +253,6 @@
   <tr>
     <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
     <td>Tagged “markdown”</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-event-airtable/"><code>/posts/community-event-airtable/</code></a></td>
-    <td>How History At State uses TEI Publisher&#39;s annotation tool and Airtable</td>
   </tr>
   </tbody>
 </table>
