--- a/map/index.html
+++ b/map/index.html
@@ -378,7 +378,7 @@ In preparation.</div>
             </li>
         
             <li>
-                <h3>Sand and Stars <small><i class="bi bi-geo geoplace" data-coordinates="32.76327500000001,35.016468"></i></small></h3>
+                <h3>Sand and Stars <small><i class="bi bi-geo geoplace" data-coordinates="32.763276,35.016468"></i></small></h3>
                 <div>Sand and Stars (https://www.dzi.de/ueber-uns/geschichte/digitalisierungsprojekt-sand-und-sterne/), a project funded by DZI - Deutsches Zentralinstitut für soziale Fragen, builds a synoptic trilingual annotated edition of the unpublished novel by Sidonie Wronsky, (Berlin, 1882–Jerusalem, 1947) who was an notable Jewish German social reformist and social worker, active in both the German welfare system and later in the Jewish community in Mandatory Palestine.
 </div>
                 <a href="https://teipublisher.info/exist/apps/Sand-and-Stars/Synoptic Version.xml" class="badge bg-light text-dark">Link</a>
