deploy: 03afe0b577e8a402def368e229fb41b600bb30a8

--- a/map/index.html
+++ b/map/index.html
@@ -412,7 +412,7 @@ In preparation.</div>
             </li>
         
             <li>
-                <h3>TraveLab <small><i class="bi bi-geo geoplace" data-coordinates="32.7633,35.0165"></i></small></h3>
+                <h3>TraveLab <small><i class="bi bi-geo geoplace" data-coordinates=" 32.76114312529942,35.019588135024456"></i></small></h3>
                 <div>TraveLab is a project that explores new ways to read Historical travelogs, combining an interactive map with aligned parallel editions. Starting with a trilingual edition of the Journey of Benjamin of Tudela, a Jewish 12th century traveler, the project will continue to integrate additional Travelogs.  XML files are available under CC BY 4.0.</div>
                 <a href="https://teipublisher.info/exist/apps/TraveLab/index.html" class="badge bg-light text-dark">Link</a>
                 
