--- a/map/index.html
+++ b/map/index.html
@@ -313,7 +313,7 @@ In preparation.</div>
         
             <li>
                 <h3>Karl Barth-Gesamtausgabe <small><i class="bi bi-geo geoplace" data-coordinates="47.5345555,7.587217099999997"></i></small></h3>
-                <div>In Vorbereitung</div>
+                <div>Die digitale Karl Barth-Gesamtausgabe präsentiert erstmals frei zugänglich und digital Texte aus der Karl Barth-Gesamtausgabe. Es werden laufend weitere Bände digital aufbereitet.</div>
                 <a href="https://karlbarth.unibas.ch/de/" class="badge bg-light text-dark">Link</a>
                 
                 <a href="mailto:bartharchiv-theol@unibas.ch" class="badge bg-light text-dark">Contact</a>
