deploy: 6a310f46e0e7f3a405a358260c906ef0ac060edb

--- a/pages/get-in-touch/index.html
+++ b/pages/get-in-touch/index.html
@@ -102,7 +102,7 @@
             <h1>Get in Touch</h1>
             <p>The following channels are open for community discussions. You don't need to be a member to join the conversation, though we certainly encourage you to join forces and become one.</p>
 <h2 id="mailing-list" tabindex="-1">Mailing List</h2>
-<p>The mailing list serves as general communication hub for announcements, questions, suggestions, introductions, exchange of ideas and everything else you would like to share. Please note that this should not replace existing mailing lists like tei-l or exist-open, so please consider first if your particular question would better be asked on one of the more specialized lists. However, do not hesitate to communicate and remember: there are no silly questions and our community is open and welcoming.</p>
+<p>The mailing list serves as general communication hub for announcements, questions, suggestions, introductions, exchange of ideas and everything else you would like to share. Please note that this should not replace existing mailing lists like TEI-L or exist-open, so please consider first if your particular question would better be asked on one of the more specialized lists. However, do not hesitate to communicate and remember: there are no silly questions and our community is open and welcoming.</p>
 <p>The list is subscription only and open to the public. Please subscribe <a href="https://admin.hostpoint.ch/mailman/listinfo/community_e-editiones.org">by filling out the form</a>.</p>
 <p>To post a message to all the list members, send email to: <a href="mailto:community@e-editiones.org">community@e-editiones.org</a>.</p>
 <h2 id="slack-community" tabindex="-1">Slack Community</h2>
@@ -113,12 +113,12 @@
 </ul>
 <p>The board will treat communications in the <code>#members</code> channel with a higher priority.</p>
 <p>Please join the <a href="https://join.slack.com/t/e-editiones/shared_invite/zt-e19jc03q-OFaVni~_lh6emSHen6pswg">slack workspace</a>.</p>
-<h2 id="twitter-und-linkedin" tabindex="-1">Twitter und LinkedIn</h2>
+<h2 id="twitter-and-linkedin" tabindex="-1">Twitter and LinkedIn</h2>
 <p>We will post news via our <a href="https://twitter.com/EEditiones">Twitter account</a> and <a href="https://www.linkedin.com/groups/8979185/">LinkedIn</a>. If you would like to share something about a project or forthcoming events, please contact the board or mention @EEditiones so we can retweet.</p>
-<h2 id="github" tabindex="-1">Github</h2>
-<p>You can find the source code of the TEI Publisher and many examples on <a href="https://github.com/eeditiones">Github</a>.</p>
-<h2 id="youtube" tabindex="-1">Youtube</h2>
-<p>On Youtube you can find some recordings of meetings and workshops: <a href="https://www.youtube.com/channel/UCAPhSZdBwFRCEFWNNYOC4Ww">YouTube</a></p>
+<h2 id="github" tabindex="-1">GitHub</h2>
+<p>You can find the source code of the TEI Publisher and many examples on <a href="https://github.com/eeditiones">GitHub</a>.</p>
+<h2 id="youtube" tabindex="-1">YouTube</h2>
+<p>On YouTube you can find some recordings of meetings and workshops: <a href="https://www.youtube.com/channel/UCAPhSZdBwFRCEFWNNYOC4Ww">YouTube</a></p>
 <h2 id="zenodo" tabindex="-1">Zenodo</h2>
 <p>On Zenodo we have a community with different TEI datasets from projects which are using the TEI Publisher: <a href="https://zenodo.org/communities/e-editiones">Zenodo</a></p>
 
@@ -126,7 +126,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#mailing-list">Mailing List</a></li><li><a href="#slack-community">Slack Community</a></li><li><a href="#twitter-und-linkedin">Twitter und LinkedIn</a></li><li><a href="#github">Github</a></li><li><a href="#youtube">Youtube</a></li><li><a href="#zenodo">Zenodo</a></li></ul>
+        <ul><li><a href="#mailing-list">Mailing List</a></li><li><a href="#slack-community">Slack Community</a></li><li><a href="#twitter-and-linkedin">Twitter and LinkedIn</a></li><li><a href="#github">GitHub</a></li><li><a href="#youtube">YouTube</a></li><li><a href="#zenodo">Zenodo</a></li></ul>
       </nav>
         </aside>
         
