--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -140,7 +140,7 @@
 <li>Dr. Andreas Kränzle, Research Fellow for the Digital Edition at <a href="https://karlbarth.unibas.ch/">Karl Barth-Archiv, University of Basel</a> and <a href="https://www.k-r.ch">k &amp; r</a>, Zürich</li>
 <li>Krzysztof Nowak, Medieval Latin lexicographer and corpus linguist, project lead of the <a href="https://scriptores.pl/efontes">Electronic corpus of Polish Medieval Latin</a> and developer of <a href="https://elexicon.scriptores.pl">dictionary</a> and <a href="https://editiones.scriptores.pl">digital edition</a> applications | <a href="https://ijp.pan.pl/en/pracownicy/krzysztof-nowak/">Departement of Medieval Latin</a>, Institute of Polish Language (Polish Academy of Sciences)</li>
 <li>Roberta Padlina, Dr. des., Coordinator <a href="https://www.nie-ine.ch/">NIE-INE</a>, Universität Basel</li>
-<li>Gerold Ritter, Dr. phil., <a href="https://www.e-hist.ch">e-hist</a>, Zürich</li>
+<li>Gerold Ritter, Dr., <a href="https://www.e-hist.ch">e-hist</a>, Zürich</li>
 <li><a href="https://hcommons.org/members/arojascastro1987">Antonio Rojas-Castro</a>, PhD, /Berlin-Brandenburgische Akademie der Wissenschaften and Universidad Internacional de la Rioja</li>
 <li>Gil Shalit, <a href="https://www.dh-dev.com/">DH Development</a></li>
 <li>Sinai Rusinek, <a href="https://elijahlab.haifa.ac.il/" title="Elijah Lab">Elijah Lab</a>, Haifa University; project leader of TraveLab</li>
@@ -149,9 +149,10 @@
 <li>Anna Skolimowska, Dr. hab., Head of the <a href="http://fontes.ibi.uw.edu.pl/">Laboratory for Source Editing &amp; Digital Humanities</a>, Faculty of «Artes Liberales», University of Warsaw</li>
 <li><a href="https://rise.unibas.ch/de/team/elena-spadini">Spadini, Elena</a>, Dr., Research Navigator, Research and Infrastructure Support (RISE), Universität Basel</li>
 <li><a href="https://uzh.academia.edu/ClaudiaSutter">Claudia Sutter</a>, freie Historikerin, Archivarin, Stein am Rhein, Urbar des Dominikanerinnenklosters St. Katharinen St.Gallen</li>
-<li>Dr. Pascale Sutter, Leiterin der <a href="https://www.ssrq-sds-fds.ch">Rechtsquellenstiftung des Schweizerischen Juristenvereins</a>, c/o Universität St. Gallen</li>
+<li>Pascale Sutter, Dr., Leiterin der <a href="https://www.ssrq-sds-fds.ch">Rechtsquellenstiftung des Schweizerischen Juristenvereins</a>, c/o Universität St. Gallen</li>
 <li>Cristina Vertan, Dr., Projektleiterin von <a href="https://www.inf.uni-hamburg.de/inst/dmp/hercore/projects.html">Annotation und Analyse von historischen Dokumenten</a>, Arbeitsstelle Computerphilologie, Universität Hamburg</li>
 <li><a href="https://online.uni-graz.at/kfu_online/wbForschungsportal.cbShowPortal?pPersonNr=80075">Georg Vogeler</a>, Dr. phil., Professor Digital Humanities, Zentrum für Informationsmodellierung, Universität Graz</li>
+<li>Andreas Wagner, Dr., <a href="https://www.lhlt.mpg.de/en">Max Planck Institute for Legal History and Legal Theory</a></li>
 <li>Arman Weidenmann, <a href="https://www.stadtarchiv.ch/">Stadtarchiv der Ortsbürgergemeinde St. Gallen</a></li>
 <li><a href="https://joewiz.org/">Joseph Wicentowski</a>, PhD, Historian, <a href="https://history.state.gov/">Office of the Historian</a>, U.S. Department of State</li>
 <li><a href="https://www.forschung.schola-cantorum-basiliensis.ch/de/uber-uns/personen.html?detail=c4d55c87-d6ba-444b-884f-b1d92de517ea">Rolf Wissmann</a>, M.A, Wissenschaftlicher Mitarbeiter SNF-Forschungsprojekt: «Vicentino21», Fachhochschule Nordwestschweiz | Musik-Akademie Basel, Hochschule für Musik | <a href="https://www.fhnw.ch/schola-cantorum-basiliensis">Schola Cantorum Basiliensis</a></li>
