--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -152,7 +152,7 @@
 <li>Pascale Sutter, Dr., Leiterin der <a href="https://www.ssrq-sds-fds.ch">Rechtsquellenstiftung des Schweizerischen Juristenvereins</a>, c/o Universität St. Gallen</li>
 <li>Cristina Vertan, Dr., Projektleiterin von <a href="https://www.inf.uni-hamburg.de/inst/dmp/hercore/projects.html">Annotation und Analyse von historischen Dokumenten</a>, Arbeitsstelle Computerphilologie, Universität Hamburg</li>
 <li><a href="https://online.uni-graz.at/kfu_online/wbForschungsportal.cbShowPortal?pPersonNr=80075">Georg Vogeler</a>, Dr. phil., Professor Digital Humanities, Zentrum für Informationsmodellierung, Universität Graz</li>
-<li>Andreas Wagner, Dr., <a href="https://www.lhlt.mpg.de/en">Max Planck Institute for Legal History and Legal Theory</a></li>
+<li><a href="https://www.lhlt.mpg.de/wagner/en">Andreas Wagner</a>, Dr., Max Planck Institute for Legal History and Legal Theory</li>
 <li>Arman Weidenmann, <a href="https://www.stadtarchiv.ch/">Stadtarchiv der Ortsbürgergemeinde St. Gallen</a></li>
 <li><a href="https://joewiz.org/">Joseph Wicentowski</a>, PhD, Historian, <a href="https://history.state.gov/">Office of the Historian</a>, U.S. Department of State</li>
 <li><a href="https://www.forschung.schola-cantorum-basiliensis.ch/de/uber-uns/personen.html?detail=c4d55c87-d6ba-444b-884f-b1d92de517ea">Rolf Wissmann</a>, M.A, Wissenschaftlicher Mitarbeiter SNF-Forschungsprojekt: «Vicentino21», Fachhochschule Nordwestschweiz | Musik-Akademie Basel, Hochschule für Musik | <a href="https://www.fhnw.ch/schola-cantorum-basiliensis">Schola Cantorum Basiliensis</a></li>
