deploy: dfe4f9b6e8e177513d2ea20c24473de3ac23bda4

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -100,7 +100,15 @@
     <div class="row gx-lg-5 gx-2">
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
-            <h3 id="assembly-2023-2nd-may-2023-(16-h-cest)" tabindex="-1">Assembly 2023 2nd May 2023 (16 h CEST)</h3>
+            <h3 id="assembly-2023-16th-april-2024-(16-h-cest)" tabindex="-1">Assembly 2023 16th April 2024 (16 h CEST)</h3>
+<ul>
+<li>Invitation/Agenda - 4nd AGM of e-editiones (german, english) <a href="/resources/2024/Invitation_Agenda_4rdAGM e-editiones.pdf">PDF</a></li>
+<li>[ad 3] Protokoll der Sitzung vom 2.5.2023 (german) <a href="/resources/2024/Protokoll der 3. GV e-editiones.pdf">Protokoll der 3. GV e-editiones</a></li>
+<li>[ad 4] Annual Report</li>
+<li>[ad 5] Annual Accounts 2023 <a href="/resources/2024/e-editiones-Kassenbuch-2023.pdf">PDF</a>), bilance <a href="/resources/2024/e-editiones-bilanz-2023.pdf">PDF</a> revision <a href="/resources/2024/Revisionsbericht_e_editiones_2023.pdf">PDF</a></li>
+<li>[ad 6] <a href="/resources/2024/e-editiones-budget_2024.pdf">Budget 2024</a></li>
+</ul>
+<h3 id="assembly-2023-2nd-may-2023-(16-h-cest)" tabindex="-1">Assembly 2023 2nd May 2023 (16 h CEST)</h3>
 <ul>
 <li>Invitation/Agenda - 3nd AGM of e-editiones (german, english) <a href="/resources/2023/Invitation_Agenda_3rdAGM e-editiones.pdf">PDF</a></li>
 <li>[ad 3] Protokoll der Sitzung vom 5.4.2022 (german) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></li>
@@ -139,7 +147,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
+        <ul><li><a href="#assembly-2023-16th-april-2024-(16-h-cest)">Assembly 2023 16th April 2024 (16 h CEST)</a></li><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
       </nav>
         </aside>
         
