deploy: 3fe90db2ae5099d516d2e473d0900e8e4d9de538

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -115,6 +115,7 @@
 <li><a href="https://www.stiftsbezirk.ch/de/stiftsbibliothek/">Stiftsbibliothek St.Gallen</a></li>
 <li><a href="https://www.eisenbibliothek.ch/">Stiftung Eisenbibliothek</a>, Klostergut Paradies, Schlatt TG</li>
 <li><a href="https://www.archives-online.org">Trägerschaft Archives Online</a></li>
+<li><a href="https://www.zde.uzh.ch">Zentrum Digitale Editionen &amp; Editionsanalytik</a>, Universität Zürich</li>
 <li><a href="http://existsolutions.com/">eXist Solutions GmbH</a>, Lenzkirch/Berlin</li>
 </ul>
 <h2 id="individual-members" tabindex="-1">Individual Members</h2>
