deploy: d3426e0a4c099548597fedc2954618150fb7195e

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -158,6 +158,7 @@
 <li><a href="https://joewiz.org/">Joseph Wicentowski</a>, PhD, Historian, <a href="https://history.state.gov/">Office of the Historian</a>, U.S. Department of State</li>
 <li><a href="https://www.forschung.schola-cantorum-basiliensis.ch/de/uber-uns/personen.html?detail=c4d55c87-d6ba-444b-884f-b1d92de517ea">Rolf Wissmann</a>, M.A, Wissenschaftlicher Mitarbeiter SNF-Forschungsprojekt: «Vicentino21», Fachhochschule Nordwestschweiz | Musik-Akademie Basel, Hochschule für Musik | <a href="https://www.fhnw.ch/schola-cantorum-basiliensis">Schola Cantorum Basiliensis</a></li>
 <li>Christian von Zimmermann, Dr. phil., Privatdozent, Leiter <a href="https://www.gotthelf.unibe.ch/">Forschungsstelle Jeremias Gotthelf</a>, Bern</li>
+<li>Elias Zimmermann,  Elias Zimmermann, Dr., wissenschaftlicher Mitarbeiter <a href="https://www.zde.uzh.ch/de/projects/proto4diged.html">Proto4DigEd</a>, and <a href="https://www.zde.uzh.ch/de/news/2024/schwarzenbach.html">Digitale Edition Annemarie Schwarzenbach</a></li>
 </ul>
 
         </div>
