deploy: 157a2297e2d56aeaa4c4cf3cf7d931ad02caf849

--- a/map/index.html
+++ b/map/index.html
@@ -378,7 +378,7 @@ In preparation.</div>
                 <h3>Louis Ginzberg: Legenden der Juden <small><i class="bi bi-geo geoplace" data-coordinates="47.3804424,8.5450536"></i></small></h3>
                 <div>In Vorbereitung. Erstmalige Edition des deutschen Urmanuskripts von Louis Ginzbergs Sammlung jüdischen Erzählguts, deren englische Bearbeitung international weit verbreitet ist
 </div>
-                <a href=" https://lit.ethz.ch/forschung/laufende-drittmittelprojekte/louis-ginznerg--die-legenden-der-juden.html" class="badge bg-light text-dark">Link</a>
+                <a href="https://www.ginzberg.ethz.ch/index.html" class="badge bg-light text-dark">Link</a>
                 
                 <a href="mailto:joanna.nowotny@lit.gess.ethz.ch" class="badge bg-light text-dark">Contact</a>
                 
