deploy: 0cf3027766c4da3bda16e0341201c0b588bc5a67

--- a/pages/get-in-touch/index.html
+++ b/pages/get-in-touch/index.html
@@ -105,7 +105,7 @@
             <p>The following channels are open for community discussions. You don't need to be a member to join the conversation, though we certainly encourage you to join forces and become one.</p>
 <h2 id="mailing-list" tabindex="-1">Mailing List</h2>
 <p>The mailing list serves as general communication hub for announcements, questions, suggestions, introductions, exchange of ideas and everything else you would like to share. Please note that this should not replace existing mailing lists like TEI-L or exist-open, so please consider first if your particular question would better be asked on one of the more specialized lists. However, do not hesitate to communicate and remember: there are no silly questions and our community is open and welcoming.</p>
-<p>The list is subscription only and open to the public. Please subscribe <a href="https://admin.hostpoint.ch/mailman/listinfo/community_e-editiones.org">by filling out the form</a>.</p>
+<p>The list is subscription only and open to the public. Please subscribe <a href="https://lists.hostpoint.ch/mailman3/lists/community.e-editiones.org/">by filling out the form</a>.</p>
 <p>To post a message to all the list members, send email to: <a href="mailto:community@e-editiones.org">community@e-editiones.org</a>.</p>
 <h2 id="slack-community" tabindex="-1">Slack Community</h2>
 <p>Slack allows a more direct communication than the mailing list, so it's good for ongoing discussions between users present at the same time, but messages will not be archived forever. Two channels are available:</p>
