deploy: 411f52e25bf2f93f805f0f60675604aaece5a7e7

--- a/join/index.html
+++ b/join/index.html
@@ -102,12 +102,12 @@
     <div class="row gx-5">
         <div class="col-md-8">
             <h1>Editions with Future</h1>
-            <h2 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">rooted in standards -  built by the community - meant to last</h2>
+            <h2 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">Rooted in standards -  built by the community - meant to last</h2>
 <p>e-editiones is an international non-profit society bringing together edition projects, cultural heritage institutions, scholars, and developers to empower digital projects by promoting open standards and community collaboration— with the ultimate goal of helping to sustain editions far into the future. We</p>
 <ul>
-<li>Foster the development of open source software for digital scholarly editions and related projects.</li>
-<li>Provide a meeting place and think tank for researchers, memory institutions, and developers alike.</li>
-<li>Organize regular workshops and community meetings.</li>
+<li>foster the development of open source software for digital scholarly editions and related projects.</li>
+<li>provide a meeting place and think tank for researchers, memory institutions, and developers alike.</li>
+<li>organize regular workshops and community meetings.</li>
 </ul>
 <h4 id="join-our-open-community" tabindex="-1">Join our open community</h4>
 <p>Get in contact with us via <a href="mailto:info@e-editiones.org">email</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#mailing-list">mailing list</a>, <a href="https://social.e-editiones.org/@eeditiones">Mastodon</a>, <a href="https://www.e-editiones.org/pages/get-in-touch/#slack-community">Slack</a>, <a href="https://github.com/eeditiones/">GitHub</a>, <a href="https://www.linkedin.com/company/e-editiones/">LinkedIn</a> or <a href="https://x.com/eeditiones">Twitter</a>.</p>
@@ -130,7 +130,7 @@
     </a>    
     <hr>
     <a href="https://tei-publisher.com">
-        <div style="padding-bottom:1em;">Toolbox by and for the digital humanities</div>            
+        <div style="padding-bottom:1em;">A toolbox by and for the digital humanities</div>            
         <svg width="90%"  viewBox="0 0 872 229" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title desc" role="img">
             <title id="title">TEI Publisher Logo</title>
             <desc id="desc">A logo consisting of a handdrawn dark-gray code bracket with orange lines on the right and the words tei publisher.</desc>
