deploy: 983ce5485460523070e1d7dbb6104125055dc9d7

--- a/join/index.html
+++ b/join/index.html
@@ -102,7 +102,44 @@
     <div class="row gx-5">
         <div class="col-md-8">
             <h1>Editions with Future</h1>
-            <h2 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">Rooted in standards -  built by the community - meant to last</h2>
+            <h2 id="e-editiones-at-dh2024-in-washington-dc%2C-usa" tabindex="-1">e-editiones at DH2024 in Washington DC, USA</h2>
+<h4 id="from-a-publishing-tool-to-a-virtual-research-environment%3A-producing-scholarly-editions-with-tel-publisher" tabindex="-1">From a publishing tool to a virtual research environment: producing scholarly editions with TEl Publisher</h4>
+<ul>
+<li>When: <strong>Wednesday 7th of August 10:30 EST</strong></li>
+<li>Who: Wolfgang Meier, Joseph C Wicentowski, Magdalena Turska, Helena Bermudez Sabel</li>
+<li>What: Presentation</li>
+<li>Where: Van Metre Hall 308</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Agenda/3915869">Whova Link</a></li>
+</ul>
+<h4 id="poster-session-i" tabindex="-1">Poster Session I</h4>
+<ul>
+<li>When: <strong>Wednesday 7th of August 6:00 PM – 7:30 PM EST</strong></li>
+<li>Where: Van Metre Hall 125</li>
+</ul>
+<h5 id="publishing-process-for-digital-scholarly-editing%3A-jagiellonian-digital-platform" tabindex="-1">Publishing Process for Digital Scholarly Editing: Jagiellonian Digital Platform</h5>
+<ul>
+<li>Who: Joanna Katarzyna Hałackiewicz,  Iwona Grabska-Gradzinska, Magdalena Eulalia Komorowska, Magdalena Turska</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/107777">Whova Link</a></li>
+</ul>
+<h5 id="new-generation-of-electronic-edition-for-neo-latin-literature-%E2%80%93-rescue-from-oblivion%2C-stage-two" tabindex="-1">New Generation of Electronic Edition for Neo-Latin Literature – Rescue from Oblivion, Stage Two</h5>
+<ul>
+<li>Who: Grabska-Gradzinska, Iwona (1,2); Urban-Godziek Grażyna (1)</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108318">Whova Link</a></li>
+</ul>
+<h4 id="e-editiones-%2F-tei-publisher-get-together" tabindex="-1">E-Editiones / TEI Publisher Get Together</h4>
+<ul>
+<li>When: <strong>Wednesday 7th of August 7:00 PM – 9:30 PM EST</strong></li>
+<li>Where: <a href="https://rocklands.com/locations/arlington-va/">ROCKLANDS</a> - souther style cusine - at <a href="https://maps.app.goo.gl/VqqA6XEUmabFegHD9">3471 Washington Blvd. Arlington, VA 22201</a>.</li>
+</ul>
+<p>Everyone is invited to join, you don't need to be a conference participant</p>
+<h4 id="poster-session-ii---reinvention%2C-responsibility-%26-resurrection%3A-how-to-future-proof-an-edition" tabindex="-1">Poster Session II -  Reinvention, Responsibility &amp; Resurrection: how to future-proof an edition</h4>
+<ul>
+<li>When: <strong>Friday 9th of August 2:00 PM - 3:30 PM EST</strong></li>
+<li>Who: Magdalena Turska, Helena Bermudez Sabel</li>
+<li>Where: Van Metre Hall 125</li>
+<li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108353">Whova Link</a></li>
+</ul>
+<h2 id="rooted-in-standards---built-by-the-community---meant-to-last" tabindex="-1">Rooted in standards -  built by the community - meant to last</h2>
 <p>e-editiones is an international non-profit society bringing together edition projects, cultural heritage institutions, scholars, and developers to empower digital projects by promoting open standards and community collaboration— with the ultimate goal of helping to sustain editions far into the future. We</p>
 <ul>
 <li>foster the development of open source software for digital scholarly editions and related projects.</li>
