deploy: 22471c8e2ee00b04950ce834f2527fc0ed3888bf

--- a/join/index.html
+++ b/join/index.html
@@ -123,7 +123,7 @@
 </ul>
 <h5 id="new-generation-of-electronic-edition-for-neo-latin-literature-%E2%80%93-rescue-from-oblivion%2C-stage-two" tabindex="-1">New Generation of Electronic Edition for Neo-Latin Literature – Rescue from Oblivion, Stage Two</h5>
 <ul>
-<li>Who: Grabska-Gradzinska, Iwona (1,2); Urban-Godziek Grażyna (1)</li>
+<li>Who: Iwona Grabska-Gradzinska, Grażyna Urban-Godziek</li>
 <li><a href="https://whova.com/portal/webapp/dh_202407/Artifact/108318">Whova Link</a></li>
 </ul>
 <h4 id="e-editiones-%2F-tei-publisher-get-together" tabindex="-1">E-Editiones / TEI Publisher Get Together</h4>
